--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,10 @@
 [package]
-name = "eframe_template"
-default-run = "eframe_template_bin"
+name = "timetabler_gui"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
 edition = "2021"
 rust-version = "1.56"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[[bin]]
-name = "eframe_template_bin"
-path = "src/main.rs"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -22,7 +16,10 @@ serde = { version = "1", features = ["derive"], optional = true }
 
 [features]
 default = []
-persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
+persistence = [
+	"eframe/persistence",
+	"serde",
+] # Enable if you want to persist app state on shutdown
 
 [profile.release]
 opt-level = 2 # fast and small wasm
